# NexusGrid-CyberPhysEnv

./: .dockerignore  .env  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  scores.json
server/: __init__.py  __main__.py  app.py  dashboard.py  graders.py  grid_engine.py  nexusgrid_environment.py  requirements.txt  reward.py  scenarios.py  spoof_engine.py
tests/: test_api.py  test_graders.py  test_kirchhoff.py  test_reproducibility.py  test_spoof_engine.py  verify_server.py
